--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html, body {
     padding: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden; /* Prevent scrollbars on the body */
+    overflow: auto; /* Prevent scrollbars on the body */
 }
 
 .iframe-container {
